simple.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      io.kompose.service: room
    name: room
  spec:
    ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
    selector:
      io.kompose.service: room
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      io.kompose.service: room
    name: room
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: room
    strategy: {}
    template:
      metadata:
        name: room
        labels:
          io.kompose.service: room
      spec:
        containers:
        - env:
          - name: PYTHONUNBUFFERED
            value: "1"
          - name: dbURL
            value: mysql+mysqlconnector://admin@10.99.100.158:3306/room
          ports:
          - containerPort: 5001
          image: aarontanyien/room:1.0
          imagePullPolicy: ""
          name: room
          resources: {}
        restartPolicy: Always
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      io.kompose.service: message-listener
    name: message-listener
  spec:
    ports:
    - name: "5003"
      port: 5003
      targetPort: 5003
    selector:
      io.kompose.service: message-listener
  status:
    loadBalancer: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      io.kompose.service: activity-log
    name: activity-log
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: activity-log
    strategy: {}
    template:
      metadata:
        name: activity-log
        labels:
          io.kompose.network/playfoo: "true"
          io.kompose.service: activity-log
      spec:
        containers:
        - env:
          - name: PYTHONUNBUFFERED
            value: "1"
          - name: dbURL
            value: mysql+mysqlconnector://is213@host.docker.internal:3306/activity_log
          - name: rabbit_host
            value: rabbitmq
          - name: rabbit_port
            value: "5672"
          image: aarontanyien/activity_log:1.0
          imagePullPolicy: ""
          name: activity-log
          resources: {}
        restartPolicy: Always
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      io.kompose.service: error
    name: error
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: error
    strategy: {}
    template:
      metadata:
        name: error
        labels:
          io.kompose.network/playfoo: "true"
          io.kompose.service: error
      spec:
        containers:
        - env:
          - name: PYTHONUNBUFFERED
            value: "1"
          - name: dbURL
            value: mysql+mysqlconnector://is213@host.docker.internal:3306/error
          - name: rabbit_host
            value: rabbitmq
          - name: rabbit_port
            value: "5672"
          image: aarontanyien/error:1.0
          imagePullPolicy: ""
          name: error
          resources: {}
        restartPolicy: Always
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      io.kompose.service: game
    name: game
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: game
    strategy: {}
    template:
      metadata:
        name: game
        labels:
          io.kompose.network/playfoo: "true"
          io.kompose.service: game
      spec:
        containers:
        - env:
          - name: PYTHONUNBUFFERED
            value: "1"
          image: aarontanyien/game:1.0
          imagePullPolicy: ""
          name: game
          resources: {}
        restartPolicy: Always
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      io.kompose.service: message
    name: message
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: message
    strategy: {}
    template:
      metadata:
        name: message
        labels:
          io.kompose.network/playfoo: "true"
          io.kompose.service: message
      spec:
        containers:
        - env:
          - name: PYTHONUNBUFFERED
            value: "1"
          - name: dbURL
            value: mysql+mysqlconnector://is213@host.docker.internal:3306/message
          - name: rabbit_host
            value: rabbitmq
          - name: rabbit_port
            value: "5672"
          image: aarontanyien/message:1.0
          imagePullPolicy: ""
          name: message
          resources: {}
        restartPolicy: Always
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      io.kompose.service: message-listener
    name: message-listener
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: message-listener
    strategy: {}
    template:
      metadata:
        name: message-listener
        labels:
          io.kompose.network/playfoo: "true"
          io.kompose.service: message-listener
      spec:
        containers:
        - env:
          - name: PYTHONUNBUFFERED
            value: "1"
          - name: dbURL
            value: mysql+mysqlconnector://is213@host.docker.internal:3306/message
          - name: rabbit_host
            value: rabbitmq
          - name: rabbit_port
            value: "5672"
          image: aarontanyien/message_listener:1.0
          imagePullPolicy: ""
          name: message-listener
          ports:
          - containerPort: 5003
          resources: {}
        restartPolicy: Always
        serviceAccountName: ""
        volumes: null
  status: {}
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    labels:
      io.kompose.service: user
    name: user
  spec:
    replicas: 1
    selector:
      matchLabels:
        io.kompose.service: user
    strategy: {}
    template:
      metadata:
        name: user
        labels:
          io.kompose.network/playfoo: "true"
          io.kompose.service: user
      spec:
        containers:
        - env:
          - name: PYTHONUNBUFFERED
            value: "1"
          - name: dbURL
            value: mysql+mysqlconnector://is213@host.docker.internal:3306/user
          ports:
          - containerPort: 5000
          image: aarontanyien/user:1.0
          imagePullPolicy: ""
          name: user
          resources: {}
        restartPolicy: Always
        serviceAccountName: ""
        volumes: null
  status: {}
kind: List
metadata: {}
